--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,12 +8,110 @@
 
     <TextView
         android:id="@+id/textViewTime"
-        android:layout_width="213dp"
-        android:layout_height="73dp"
-        android:text="Time: 30"
+        android:layout_width="196dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginBottom="16dp"
+        android:text="Time:   30"
         android:textAlignment="center"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewScore"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="63dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewScore"
+        android:layout_width="202dp"
+        android:layout_height="75dp"
+        android:layout_marginBottom="16dp"
+        android:text="Score:   0"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTime" />
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/gridLayout3"
+        android:layout_width="371dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewScore">
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            app:layout_column="0"
+            app:layout_row="0"
+            app:srcCompat="@drawable/polat" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            app:layout_column="1"
+            app:layout_row="0"
+            app:srcCompat="@drawable/polat" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            app:layout_column="2"
+            app:layout_row="0"
+            app:srcCompat="@drawable/polat" />
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            app:layout_column="0"
+            app:layout_row="1"
+            app:srcCompat="@drawable/polat" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            app:layout_column="1"
+            app:layout_row="1"
+            app:srcCompat="@drawable/polat" />
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            app:layout_column="2"
+            app:layout_row="1"
+            app:srcCompat="@drawable/polat" />
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            app:layout_column="0"
+            app:layout_row="2"
+            app:srcCompat="@drawable/polat" />
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            app:layout_column="1"
+            app:layout_row="2"
+            app:srcCompat="@drawable/polat" />
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            app:layout_column="2"
+            app:layout_row="2"
+            app:srcCompat="@drawable/polat" />
+
+
+
+    </androidx.gridlayout.widget.GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
