--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -48,6 +48,7 @@
             android:id="@+id/imageView"
             android:layout_width="130dp"
             android:layout_height="140dp"
+            android:onClick="increaseScore"
             app:layout_column="0"
             app:layout_row="0"
             app:srcCompat="@drawable/polat" />
@@ -56,6 +57,7 @@
             android:id="@+id/imageView2"
             android:layout_width="130dp"
             android:layout_height="140dp"
+            android:onClick="increaseScore"
             app:layout_column="1"
             app:layout_row="0"
             app:srcCompat="@drawable/polat" />
@@ -63,6 +65,7 @@
             android:id="@+id/imageView3"
             android:layout_width="130dp"
             android:layout_height="140dp"
+            android:onClick="increaseScore"
             app:layout_column="2"
             app:layout_row="0"
             app:srcCompat="@drawable/polat" />
@@ -70,6 +73,7 @@
             android:id="@+id/imageView4"
             android:layout_width="130dp"
             android:layout_height="140dp"
+            android:onClick="increaseScore"
             app:layout_column="0"
             app:layout_row="1"
             app:srcCompat="@drawable/polat" />
@@ -78,6 +82,7 @@
             android:id="@+id/imageView5"
             android:layout_width="130dp"
             android:layout_height="140dp"
+            android:onClick="increaseScore"
             app:layout_column="1"
             app:layout_row="1"
             app:srcCompat="@drawable/polat" />
@@ -85,6 +90,7 @@
             android:id="@+id/imageView6"
             android:layout_width="130dp"
             android:layout_height="140dp"
+            android:onClick="increaseScore"
             app:layout_column="2"
             app:layout_row="1"
             app:srcCompat="@drawable/polat" />
@@ -92,6 +98,7 @@
             android:id="@+id/imageView7"
             android:layout_width="130dp"
             android:layout_height="140dp"
+            android:onClick="increaseScore"
             app:layout_column="0"
             app:layout_row="2"
             app:srcCompat="@drawable/polat" />
@@ -100,6 +107,7 @@
             android:id="@+id/imageView8"
             android:layout_width="130dp"
             android:layout_height="140dp"
+            android:onClick="increaseScore"
             app:layout_column="1"
             app:layout_row="2"
             app:srcCompat="@drawable/polat" />
@@ -107,6 +115,7 @@
             android:id="@+id/imageView9"
             android:layout_width="130dp"
             android:layout_height="140dp"
+            android:onClick="increaseScore"
             app:layout_column="2"
             app:layout_row="2"
             app:srcCompat="@drawable/polat" />
